--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "smsplatform",
+  "name": "bbas",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "4": "0.0.0",
+    "@emotion/react": "^11.8.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -10,11 +12,20 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
+    "lodash": "^4.17.21",
+    "mobx": "^6.4.2",
+    "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^6.0.0-0",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "semantic-ui-react": "^2.1.2",
     "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
